# smash-the-pinata

./: .gitignore  CMakeLists.txt  CREDITS  Makefile  build.bat  build.sh  index.data  index.html  index.js  index.wasm  shell.html
.github/workflows/: deploy.yaml
raylib/: raylib_cheatsheet.c
src/: game.c  logo.c  main.c
src/include/: config.h  game.h  logo.h
